--- a/public/index.html
+++ b/public/index.html
@@ -2,47 +2,33 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Scraping With Mongoose</title>
-    <style>
-      body { background-color: #F2F6D0 }
-      #wrapper {
-        width: 960px;
-        margin-left: auto;
-        margin-right: auto;
-        padding-top: 5%;
-      }
-      #articles {
-        display: inline-block;
-        overflow: auto;
-        width: 60%;
-        height: 700px;
-      }
-      #notes {
-        float: right;
-        width: 30%;
-      }
-      textarea, input {
-        display: block;
-        width: 100%;
-        background-color: #FCF5C7;
-      }
-      input {
-        height: 36px;
-        font-size: 24px;
-      }
-      textarea {
-        height: 200px;
-        font-size: 18px;
-      }
-    </style>
+    <title>HuffPost Parent</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css" type="text/css">
+    
   </head>
   <body>
-    <div id="wrapper">
-      <h1>Note Scraper</h1>
-      <h2><i>If you can do this...the homework should be no problem.</i></h2>
-      <div id="articles"></div>
-      <div id="notes"></div>
-    </div>
+
+      <nav class="navbar">
+          <span class="navbar-brand mb-0 h1">HuffPost Parent</span>
+        </nav>
+
+        <div class="card text-center">
+            <div class="card-header">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Today's Top Parenting News</h5>
+              <a href="#" class="btn btn-primary" id="scrape-button">Scrape Articles</a>
+              <a href="#" class="btn btn-primary">Clear Articles</a>
+              <div id="articles"></div>
+              <div id="notes"></div>
+              
+            </div>
+            <div class="card-footer text-muted">
+              All articles are the property of https://www.huffpost.com.
+            </div>
+          </div>
+  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
   </body>
