--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,9 @@
             <div class="card-body">
               <h5 class="card-title"></h5>
               
-              <div id="articles"></div>
+              <div id="articles">
+                No articles here! Try scraping some.
+              </div>
               <div id="notes"></div>
 
                            
