no handlebars yet

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
           <span class="navbar-brand mb-0 h1">HuffPost Parent</span>
           <div class="float-right">
           <a class="btn btn-primary" id="scrape-button">Scrape Articles</a>
+          <!-- <a class="btn btn-primary" id="clear-button">Clear Articles</a> -->
         </div>
         </nav>
 
